# parcetrace

./: .gitignore  README.md  package-lock.json
.github/workflows/: ocr-docker.yml
.vercel/: project.json
api/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
api/ocrserver/: main.py  requirements.txt
api/src/: app.ts  firestoreoperation.ts  greetings.ts  message.ts  ocr.ts
experiments/easyocr/: main.py
experiments/easyocr/res/: download.txt
experiments/ocrserver/: main.py  requirements.txt  run.sh
experiments/pytesseract/: main.py  pyproject.toml  res.txt
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.js
frontend/api/: getuserid.go
frontend/src/: App.svelte  app.css  app.html  main.ts
frontend/src/lib/: env.ts  loading.svelte  modal.svelte  statuspage.svelte  success.svelte
frontend/src/routes/: +layout.svelte  (+3 more)
native/: .jabbarc  App.tsx  README.md  app.json  babel.config.js  eas.json  index.js  nativescript.config.ts  package-lock.json  package.json  tailwind.config.js
native/android/: settings.gradle
native/app/: App.svelte  app.css
native/components/: CaptureButton.tsx  StatusBarBlrBackground.tsx
native/context/: authState.ts  permissionState.ts
native/etc/: constants.ts  firebase.ts
native/hooks/: useIsForeground.ts
native/page/: Camera.tsx  Debug.tsx  Home.tsx  Media.tsx  OCR.tsx  OCRTest.tsx  ParcelAdd.tsx  Permission.tsx  Welcome.tsx
native/types/: Routes.ts
ocr/: Code.gs  README.md
ocr/ocrserver/: Dockerfile  requirements.txt
(+45 files in other folders)
